feat(BeanUtils): deepCopy depth control + superclass property support + defect fixes